# Garbage-Collector

./: .gitattributes  README.md
GC/: CMakeLists.txt
GC/include/: Exception.h  GarbageCollector.h
GC/src/: SandBox.cpp
MemoryLeakDetector/: CMakeLists.txt
MemoryLeakDetector/include/: MLD.h  ObjectDataBase.h  StructDataBase.h
MemoryLeakDetector/src/: DisjointSetGraph.c  ObjectHandle.c  RegisterStructure.c  Test.c
